# ROXI_Factory_Tool_ROS2

./: README.md  fw_updater.py
roxi_comm_ws/install/: local_setup.sh  setup.sh
roxi_comm_ws/install/roxi_communication/lib/roxi_communication/: imu_comm_node  mcu_comm_node  motor_comm_node  serial_comm_node  tray_comm_node
roxi_comm_ws/install/roxi_communication/share/roxi_communication/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
roxi_comm_ws/install/roxi_gui/share/roxi_gui/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
roxi_comm_ws/log/: latest_build
roxi_comm_ws/src/roxi_communication/: package.xml  setup.cfg  setup.py
roxi_comm_ws/src/roxi_communication/roxi_communication/: imu_comm_node.py  lidar_comm_node.py  mcu_comm_node.py  motor_comm_node.py  serial_comm_node.py
roxi_comm_ws/src/roxi_gui/: package.xml  setup.cfg  setup.py
roxi_communication/: setup.py
roxi_communication/roxi_communication/: ZLAC8015D.py  comm_protocol.py  imu_comm_node.py  imu_comm_not_ros.py  lidar_comm_node.py  mcu_comm_node.py  mcu_comm_not_ros.py  motor_comm_node.py  test_zlac_comm.py  tray_comm_node.py
src/roxi_fw_updater/: package.xml  setup.cfg  setup.py
src/roxi_fw_updater/roxi_fw_updater/: comm_protocol.py  fw_updater copy.py  fw_updater.py  new.py  roxi_factory_tool_v.py  trimmed.py  xmodem_updater.py
