<?xml version="1.0"?>
<package format="3">
  <name>roxi_fw_updater</name>
  <version>0.1.0</version>
  <description>CLI firmware updater for ROXI hardware using ROS2</description>
  <maintainer email="your@email.com">YOUR_NAME</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>pyserial</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
